// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Status should not render the badge if showConnectedStatus is false 1`] = `
<div>
  <button
    class="mm-box multichain-badge-status pr-1 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-transparent"
    data-testid="multichain-badge-status"
  >
    <div
      class="mm-box mm-badge-wrapper mm-box--display-inline-block"
    >
      <div
        class="shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8 flex"
      >
        <div
          class="flex [&>div]:!rounded-none"
        >
          <div
            style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(250, 58, 0);"
          >
            <svg
              height="32"
              width="32"
              x="0"
              y="0"
            >
              <rect
                fill="#18CDF2"
                height="32"
                transform="translate(-1.04839350379394 -3.30428406946050) rotate(328.9 16.00000000000000 16.00000000000000)"
                width="32"
                x="0"
                y="0"
              />
              <rect
                fill="#035E56"
                height="32"
                transform="translate(-18.29846170883204 10.59246187174860) rotate(176.2 16.00000000000000 16.00000000000000)"
                width="32"
                x="0"
                y="0"
              />
              <rect
                fill="#F26602"
                height="32"
                transform="translate(16.66784201822392 -14.20513972299708) rotate(468.9 16.00000000000000 16.00000000000000)"
                width="32"
                x="0"
                y="0"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
      />
    </div>
  </button>
</div>
`;

exports[`Badge Status should render correctly 1`] = `
<div>
  <button
    class="mm-box multichain-badge-status pr-1 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-transparent"
    data-testid="multichain-badge-status"
  >
    <div>
      <div
        aria-describedby="tippy-tooltip-1"
        class=""
        data-original-title="Not Connected"
        data-tooltipped=""
        style="display: flex;"
        tabindex="0"
      >
        <div
          class="mm-box mm-badge-wrapper mm-box--display-inline-block"
        >
          <div
            class="shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8 flex"
          >
            <div
              class="flex [&>div]:!rounded-none"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(250, 58, 0);"
              >
                <svg
                  height="32"
                  width="32"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#18CDF2"
                    height="32"
                    transform="translate(-1.04839350379394 -3.30428406946050) rotate(328.9 16.00000000000000 16.00000000000000)"
                    width="32"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#035E56"
                    height="32"
                    transform="translate(-18.29846170883204 10.59246187174860) rotate(176.2 16.00000000000000 16.00000000000000)"
                    width="32"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F26602"
                    height="32"
                    transform="translate(16.66784201822392 -14.20513972299708) rotate(468.9 16.00000000000000 16.00000000000000)"
                    width="32"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="mm-box mm-badge-wrapper__badge-container"
            style="bottom: -4%; right: -12%;"
          >
            <div
              class="mm-box multichain-badge-status__badge multichain-badge-status__badge-not-connected mm-box--background-color-background-default mm-box--rounded-full mm-box--border-color-success-default mm-box--border-width-2 box--border-style-solid"
            />
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;
